# slim-starterkit-python

./: .gitignore  .secrets.baseline  AUTHORS.md  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  pylint.yml  python-publish.yml  secrets-detection.yml
slim_sample_project/: __init__.py  hello_world.py  version_tooling.py
slim_sample_project/api/: __init__.py  text_processor.py
slim_starterkit/: __init__.py  hello_world.py
slim_starterkit/api/: text_processor.py
starterkit/: hello_world.py  version.py
tests/: __init__.py
