[metadata]
name = slim_starterkit
url = https://github.com/NASA-AMMOS/slim-starterkit-python
download_url = https://github.com/NASA-AMMOS/slim-starterkit-python/releases/latest
project_urls =
    Documentation = https://github.com/NASA-AMMOS/slim-starterkit-python/wiki
    Site = https://nasa-ammos.github.io/slim/
    Source = https://github.com/NASA-AMMOS/slim-starterkit-python
    Tracker = https://github.com/NASA-AMMOS/slim-starterkit-python/issues
    Download = https://github.com/NASA-AMMOS/slim-starterkit-python/releases/latest
author = SLIM Project at NASA JPL
author_email = ammos_info@jpl.nasa.gov
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: System :: Installation/Setup
license = Apache-2.0
license_files =
    LICENSE
description = SLIM Starterkit Python: Python3 application development starterkit from NASA JPL's Software Lifecycle Improvement & Modernization (SLIM) project
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = nasa, jpl, SLIM, development, developer, python, application, starter kit, template

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages =
    slim_starterkit
    slim_starterkit.api
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    slim-starterkit-python = slim_starterkit.hello_world:main

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*
