[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*

# [MODIFY FOR YOUR PROJECT] ###################################################
[options.entry_points]
console_scripts =
    slim-sample-project = slim_sample_project.hello_world:main

[metadata]
name = slim_sample_project
url = https://github.com/NASA-AMMOS/slim-starterkit-python
download_url = https://github.com/NASA-AMMOS/slim-starterkit-python/releases/latest
project_urls =
    Documentation = https://github.com/NASA-AMMOS/slim-starterkit-python/wiki
    Site = https://nasa-ammos.github.io/slim/
    Source = https://github.com/NASA-AMMOS/slim-starterkit-python
    Tracker = https://github.com/NASA-AMMOS/slim-starterkit-python/issues
    Download = https://github.com/NASA-AMMOS/slim-starterkit-python/releases/latest
author = SLIM Project at NASA JPL
author_email = ammos_info@jpl.nasa.gov
description = SLIM Starterkit Python: Python3 application development sample project from NASA JPL's Software Lifecycle Improvement & Modernization (SLIM) project
keywords = nasa, jpl, SLIM, development, developer, python, application, starter kit, template
# [END MODIFY FOR YOUR PROJECT] ##############################################

# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: System :: Installation/Setup
license = Apache-2.0
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
